--- a/XIVPainter/XIVPainter.csproj
+++ b/XIVPainter/XIVPainter.csproj
@@ -5,10 +5,12 @@
 		<Authors>ArchiTed</Authors>
 		<Version>2.9.1.1</Version>
 		<PlatformTarget>x64</PlatformTarget>
-		<Platforms>AnyCPU</Platforms>
+		<Platforms>x64</Platforms>
 		<DalamudLibPath>$(AppData)\XIVLauncher\addon\Hooks\dev\</DalamudLibPath>
 		<GenerateDocumentationFile>True</GenerateDocumentationFile>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+        <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+        <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Clipper2" Version="1.2.3" />
